<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">



        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/april_2_sat"
            android:layout_marginStart="14dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_date_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bekasi_indonesia"
            android:textColor="@color/white"
            android:layout_marginStart="14dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_search"
            tools:listitem="@layout/row_future_weather"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/black"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/tv_date_place">

            <ImageView
                android:id="@+id/cloudy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_margin="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/cloudly"/>
            <TextView
                android:id="@+id/tv_weather_now"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cloudy"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/cloudy"/>




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_weather_now"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:id="@+id/view_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin='5dp'
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/view_temp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20sp"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/temp"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_wind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20sp"
                tools:layout_editor_absoluteX="157dp"
                tools:layout_editor_absoluteY="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_260"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/view_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                tools:layout_editor_absoluteX="294dp"
                tools:layout_editor_absoluteY="3dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@color/grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_daily_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/future_weather_7_days"
        app:layout_constraintTop_toBottomOf="@id/view_details"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_daily_weather"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/row_future_weather"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>