<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="20dp"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="0dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_future_weather"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="26dp"
        android:background="@color/grey_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_weather"
            android:layout_width="80sp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/sun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            app:layout_constraintTop_toTopOf="@id/iv_weather"
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tv_date_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/_3_april"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@id/tv_day"
            tools:layout_editor_absoluteX="-59dp" />

        <TextView
            android:id="@+id/max_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.706"
            app:layout_constraintStart_toEndOf="@+id/iv_weather"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strip"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="@+id/max_celsius"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.454" />

        <TextView
            android:id="@+id/tv_min_celsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_17"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.589"
            app:layout_constraintStart_toEndOf="@+id/max_celsius"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.506" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>